17571
If a val definition contains an extra set of parenthesis, like if not correctly transforming a def into a val, the error reported by the compiler is not really helpful.

{code}
$ scalac test.scala 
test.scala:5: error: not found: value a
  val a(): String = ""
      ^
one error found
{code}

It would be better if the error was something like: {{expected ':' or '=', found '('}}
